# video_sync

./: .gitignore  CLAUDE.md.tmp.1014.1756694929884  Cargo.toml  Cargo_check.toml  Cargo_temp.toml  FRONTEND_WEBSOCKET_HANDLER.js  api_client_demo.py  chat_demo.html  check_anthropic.d  check_session.rs  features.md  fix_migration.sql  manual_test.sh  test_elevenlabs_integration.py  test_modular.sh  test_multi_step.py  test_upload.txt  transforms.trf
.sqlx/: query-20f0e13dbf3a7d3fe93b43e6a06e83e7b38fa4a8b87c6bea85c844ca35b5c5b3.json
migrations/: 20250101000000_youtube_extended_features.sql  20250128000000_youtube_feature_toggle.sql  20250728000000_initial_schema.sql  20250729000000_update_schema_for_auth_and_files.sql  20250801000000_add_admin_fields_to_users.sql  20250805000000_add_whitelist_table.sql  20250909000000_add_output_videos_table.sql  20250916000000_create_conversation_messages.sql  20251126000000_add_token_usage_to_messages.sql  20251126000001_seed_model_pricing.sql  20251212000000_update_token_tracking_and_pricing.sql  20251215000000_set_default_ai_model.sql  20251215000001_add_youtube_integration.sql  20251228000000_add_youtube_clipping.sql
src/: advanced.rs  audio.rs  claude_client.rs  core.rs  db.rs  elevenlabs_client.rs  export.rs  gemini_client.rs  lib.rs  main.rs  main.rs.backup  pexels_client.rs  qdrant_client.rs  transform.rs  types.rs  utils.rs  vector_db.rs  visual.rs  voyage_embeddings.rs  youtube_analytics_client.rs  youtube_client.rs
src/agent/: conversation_manager.rs  (+8 more)
test_assets/: subtitles.srt
test_videos/: sample.mp4:Zone.Identifier
(+49 files in other folders)
