[package]
name = "video_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7.5", features = ["ws", "multipart"] }
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1.73"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "rust_decimal"] }
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "registry"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-util = { version = "0.7", features = ["io"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
backoff = { version = "0.4", features = ["tokio"] }
base64 = "0.22"
sha2 = "0.10"
bcrypt = "0.15"
jsonwebtoken = "9.2"
tower-http = { version = "0.6", features = ["cors"] }
qdrant-client = "1.12.1"
tonic = "0.12"
rand = "0.8"
hex = "0.4"
rpassword = "7.3"
lazy_static = "1.4"
regex = "1.11.2"
rust_decimal = { version = "1.36.0", features = ["serde", "db-postgres"] }
thiserror = "1.0"
urlencoding = "2.1"

